# control-rs

./: Cargo.toml  README.md  build.rs  extron.capnp
src/: client.rs  extron.rs  main.rs  server.rs
